--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -1,19 +1,38 @@
 @import 'normalize.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root{
+:root {
     --primary-color: #fe2c55;
+    --black: #000;
+    --text-color: #333;
+    // default layout
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
-*{
+* {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-html{
+html {
     font-size: 62.5%;
     scroll-behavior: smooth;
 }
-body{
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    color: var(--text-color);
+}
+
+button,
+input,
+[tabIndex] {
+    outline: none;
+    border: none;
+}
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
