Thong diep UI 2

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -18,10 +18,13 @@
     align-items: center;
     justify-content: space-between;
 }
+.search,
+.search-result {
+    width: 361px;
+}
 
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     display: flex;
@@ -56,7 +59,12 @@
         border-color: rgba(22, 24, 35, 0.2);
     }
 }
-
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    padding: 5px 12px;
+    color: rgba(22, 24, 35, 0.5);
+}
 .clear,
 .loading {
     position: absolute;
