--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -91,3 +91,9 @@
         background-color: rgba(22, 24, 35, 0.06);
     }
 }
+.more-btn {
+    font-size: 2rem;
+    margin-left: 20px;
+    padding: 4px 8px;
+    background-color: transparent;
+}
