--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,7 @@
 .container {
     width: 1150px;
     display: flex;
+    padding: 0 var(--default-layout-horizontal-spacer);
 }
 .content {
     flex: 1;
