--- a/src/components/Layout/Popper/Menu/Menu.module.scss
+++ b/src/components/Layout/Popper/Menu/Menu.module.scss
@@ -19,7 +19,9 @@
     padding: 11px 16px;
     font-weight: 700;
     line-height: 1.8rem;
-
+    &.separate {
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
+    }
     &:hover {
         background-color: rgba(22, 24, 35, 0.03);
     }
