--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -1,5 +1,4 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --primary-color: #fe2c55;
@@ -21,7 +20,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
@@ -38,6 +37,30 @@ a[href] {
     color: var(--text-color);
     text-decoration: none;
 }
+// Fonts embedded
+@font-face {
+    font-family: 'ProximaNova';
+    src: url('/asset/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 400;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('/asset/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: ProximaNova;
+    src: url('/asset/fonts/Proxima-Nova-Bold.woff');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: SofiaPro;
+    src: url('/asset/fonts/sofiapro-bold.woff');
+    font-weight: 700;
+}
+
 // Custom tippy tooltip
 body {
     .tippy-box {
