--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -44,13 +44,13 @@ a[href] {
     font-weight: 400;
 }
 @font-face {
-    font-family: ProximaNova;
+    font-family: 'ProximaNova';
     src: url('/asset/fonts/ProximaNova-Semibold.woff2');
     font-weight: 600;
 }
 
 @font-face {
-    font-family: ProximaNova;
+    font-family: 'ProximaNova';
     src: url('/asset/fonts/Proxima-Nova-Bold.woff');
     font-weight: 700;
 }
