hoan thien header #1

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,6 +19,10 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.logo {
+    display: flex;
+}
 // action
 .actions {
     display: flex;
@@ -52,7 +56,7 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: var(--white);
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     background-color: var(--primary-color);
 }
 
