--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -5,6 +5,7 @@
     --black: #000;
     --text-color: #161823;
     --white: #fff;
+    --font-family: 'ProximaNova', sans-serif;
     // default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
@@ -20,7 +21,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    font-family: 'ProximaNova', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
